--- a/package.json
+++ b/package.json
@@ -3,12 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.7",
+    "@mui/styled-engine": "^5.14.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tronweb3/tronwallet-abstract-adapter": "^1.1.5",
+    "@tronweb3/tronwallet-adapter-ledger": "^1.1.1",
+    "@tronweb3/tronwallet-adapter-react-hooks": "^1.0.0",
+    "@tronweb3/tronwallet-adapter-react-ui": "^1.1.0",
+    "@tronweb3/tronwallet-adapter-walletconnect": "^1.0.0",
+    "@tronweb3/tronwallet-adapters": "^1.1.1",
+    "mobx": "^6.10.1",
+    "mobx-react": "^9.0.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "tronweb": "^4.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +50,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.11",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.22.10",
+    "@babel/preset-env": "^7.22.14",
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "eslint": "^8.48.0",
+    "eslint-plugin-react": "^7.33.2",
+    "typescript": "^5.2.2"
   }
 }
